--- a/testwpf.csproj
+++ b/testwpf.csproj
@@ -55,6 +55,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="LeonSeite2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="LeonTestSeite.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -66,6 +70,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="LeonSeite2.xaml.cs">
+      <DependentUpon>LeonSeite2.xaml</DependentUpon>
     </Compile>
     <Compile Include="LeonTestSeite.xaml.cs">
       <DependentUpon>LeonTestSeite.xaml</DependentUpon>
