--- a/testwpf.csproj
+++ b/testwpf.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="loginScreen.xaml.cs">
+      <DependentUpon>loginScreen.xaml</DependentUpon>
+    </Compile>
     <Compile Include="TestMichael.xaml.cs">
       <DependentUpon>TestMichael.xaml</DependentUpon>
     </Compile>
@@ -63,6 +66,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="LeonTestSeite.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="loginScreen.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
