Added: NewProtocollMask NewDecisionMask

--- a/testwpf.csproj
+++ b/testwpf.csproj
@@ -55,12 +55,22 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DecisionMask.xaml.cs">
+      <DependentUpon>DecisionMask.xaml</DependentUpon>
+    </Compile>
     <Compile Include="loginScreen.xaml.cs">
       <DependentUpon>loginScreen.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="NewProtocol.xaml.cs">
+      <DependentUpon>NewProtocol.xaml</DependentUpon>
     </Compile>
     <Compile Include="TestMichael.xaml.cs">
       <DependentUpon>TestMichael.xaml</DependentUpon>
     </Compile>
+    <Page Include="DecisionMask.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="LeonSeite2.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -91,6 +101,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="NewProtocol.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="TestMichael.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
