Added Settings Page GUI

--- a/testwpf.csproj
+++ b/testwpf.csproj
@@ -64,6 +64,9 @@
     <Compile Include="NewProtocol.xaml.cs">
       <DependentUpon>NewProtocol.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Settings.xaml.cs">
+      <DependentUpon>Settings.xaml</DependentUpon>
+    </Compile>
     <Compile Include="TestMichael.xaml.cs">
       <DependentUpon>TestMichael.xaml</DependentUpon>
     </Compile>
@@ -102,6 +105,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="NewProtocol.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Settings.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
